kubernetes/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose.yaml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f compose.yaml
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: NEO4J_AUTH
              value: none
            - name: NEO4J_PLUGINS
              value: '["apoc"]'
          image: neo4j:5.18
          livenessProbe:
            exec:
              command:
                - wget http://localhost:7474 || exit 1
            failureThreshold: 50
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 5
          name: fed-reg-db
          ports:
            - containerPort: 7687
              protocol: TCP
            - containerPort: 7474
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: db-data
            - mountPath: /logs
              name: db-logs
      restartPolicy: Always
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: db-data
        - name: db-logs
          persistentVolumeClaim:
            claimName: db-logs
