kubernetes/fed-reg-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose.yaml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: fed-reg
  name: fed-reg
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: fed-reg
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f compose.yaml
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: fed-reg
    spec:
      containers:
        - env:
            - name: AUTHN_MODE
              valueFrom:
                configMapKeyRef:
                  name: fed-reg-cm0
                  key: authn_mode
            - name: AUTHZ_MODE
              valueFrom:
                configMapKeyRef:
                  name: fed-reg-cm0
                  key: authz_mode
            - name: DB_URL
              valueFrom:
                configMapKeyRef:
                  name: fed-reg-cm0
                  key: db_url
            - name: OPA_AUTHZ_URL
              valueFrom:
                configMapKeyRef:
                  name: fed-reg-cm0
                  key: opa_authz_url
          image: harbor.cloud.infn.it/datacloud-middleware/federation-registry:main
          name: fed-reg
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
