kubernetes/opa-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose.yaml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: opa
  name: opa
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: opa
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f compose.yaml
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: opa
    spec:
      containers:
        - args:
            - run
            - --server
            - --log-level
            - debug
            - --addr
            - 0.0.0.0:8181
            - /fed-reg/data.json
            - /fed-reg/policy.rego
          image: openpolicyagent/opa
          name: opa
          ports:
            - containerPort: 8181
              protocol: TCP
          volumeMounts:
            - mountPath: /fed-reg
              name: opa-cm0
              readOnly: true
      restartPolicy: Always
      volumes:
        - configMap:
            name: opa-cm0
          name: opa-cm0
