kubernetes/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose.yaml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: db
  name: db
spec:
  ports:
    - name: "7687"
      port: 7687
      targetPort: 7687
    - name: "7474"
      port: 7474
      targetPort: 7474
  selector:
    io.kompose.service: db
