kubernetes/fed-reg-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose.yaml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: fed-reg
  name: fed-reg
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 80
  selector:
    io.kompose.service: fed-reg
